# dieloli

./: .gitignore  .ycm_extra_conf.py  Game.py  LICENSE  README.md  behavior.csv  build.py  buildconfig.py  buildmo.py  buildpo.py  config.ini  game.py  game.spec  init_data.py  premise.csv  pyproject.toml  requirements.txt  start.sh  state_machine.csv
.github/workflows/: build-release.yml  build-test.yml  python-app.yml
Script/Behavior/: __init__.py  default.py  student.py  teacher.py
Script/Config/: config_def.py  game_config.py  map_config.py  name_config.py  normal_config.py
Script/Core/: about_frame.py  cache_contorl.py  cache_control.py  constant.py  dictionaries.py  dijkstra.py  era_image.py  era_print.py  flow_handle.py  game_config.py  game_data.py  game_init.py  game_path_config.py  game_type.py  get_text.py  io_init.py  json_handle.py  key_listion_event.py  main_frame.py  py_cmd.py  rich_text.py  save_handle.py  setting_frame.py  text_handle.py  (+2 more)
data/: BarConfig.json  FamilyIndex.json  FontConfig.json  MapData  PlaceData  SceneData  core_cfg.json  core_event_sort.json  data.json
pyera_engine/: pyera.py  setup.py  wpyera.py
script/: Ans.py  AttrCalculation.py  AttrPrint.py  AttrText.py  CharacterHandle.py  GameConfig.py  GameTime.py  MapHandle.py  PanelStateHandle.py  ProportionalBar.py  TextLoading.py  base_lib.py  mainflow.py
tools/: AdvNpc.csv  ClubActivity.csv  ClubTheme.csv  Macro.csv  NeedsHierarchy.csv  Settle.csv  Status.csv  buildconfig.py  buildsettle.py  buildskill.py  buildstate.py  out  premise.csv  skills.csv  state.csv  state_machine.csv
(+1292 files in other folders)
