[project]
name = "dieloli"
version = "0.1.0"
description = "A sandbox game"
authors = [
    {name = "Lulika", email = "pokemonchw@gmail.com"},
]
dependencies = [
    "numpy>=1.26.2",
    "Pillow>=10.1.0",
    "psutil>=5.9.6",
    "PyAutoGUI>=0.9.53",
    "pyephem>=9.99",
    "python-dateutil>=2.8.2",
    "scipy>=1.7.3",
    "screeninfo>=0.8.1",
    "wcwidth>=0.2.9",
    "appdirs>=1.4.4",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "CC-BY-NC-SA-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
